kubernetes/ingress/public/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public
  namespace: ingress-public
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      port: 10080
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      port: 10443
      protocol: HTTPS
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: preview-usehivy-tls
